# georef

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Config.cmake.in  Doxyfile  MANIFEST  README.md  README.org  README_DEV.md  VERSION  config  config.in  demo_a_grid.py  demo_defGrid_L.py  env.sh  libreoref.code-workspace  makeit  makeit.sh  plan_de_travail.md
lib/: App.c  App.h  Array.c  Array.h  CMakeLists.txt  Def.c  Def.h  GeoRef.c  GeoRef.h  GeoRef.hf  GeoRef.inc  GeoRef_Axis.c  GeoRef_Correct.c  GeoRef_Func.c  GeoRef_Interp.c  GeoRef_InterpCoords.c  GeoRef_InterpLL.c  GeoRef_InterpUV.c  GeoRef_InterpXY.c  GeoRef_Mask.c  GeoRef_RPN.c  GeoRef_RPNAxis.c  GeoRef_Set.c  GeoRef_Type_ABG.c  GeoRef_Type_E.c  GeoRef_Type_L.c  GeoRef_Type_LAMBERT.c  GeoRef_Type_M.c  GeoRef_Type_NS.c  GeoRef_Type_O.c  GeoRef_Type_R.c  GeoRef_Type_T.c  GeoRef_Type_U.c  GeoRef_Type_W.c  GeoRef_Type_Y.c  GeoRef_Type_Z.c  GeoRef_Utils.c  GeoRef_Utils.h  GeoRef_mod.f90  List.c  (+21 more)
lib/f90/: cubic8.cdk  ez8_cartauv.f90  ez8_gdwfllw.f90  ez8_irgdint_1.f90  ez8_irgdint_3.f90  ez8_irgdint_3_wnnc.f90  ez8_lamb_gdwfllw.f90  ez8_lamb_llwfgdw.f90  ez8_lambfll.f90  ez8_lambllfxy99.f90  ez8_lambxyfll99.f90  ez8_llflamb.f90  ez8_llwfgdw.f90  ez8_mxm.f90  ez8_nwtncof.f90  ez8_rgdint_0.f90  ez8_rgdint_1.f90  ez8_rgdint_3.f90  ez8_rgdint_3_wnnc.f90  ez8_uvacart.f90  ez8_vllfxy.f90  ez8_vtxyfll.f90  ez8_vxyfll.f90  ez_aminmax.f90  ez_applywgts.f90  ez_avg.f90  ez_calcpoleval.f90  ez_crot.f90  ez_fillnpole.f90  ez_glat.f90  ez_lac.f90  ez_nwtncof.f90  ez_xpngdag2.f90  ez_xpngdb2.f90  ezget_mask_zones.f90  lorenzo_mask_fill.f90  zlin8.cdk
python/georef/: CMakeLists.txt  __init__.py  _georef_c_bindings.py  _sharedlib.py  constants.py  cubed_sphere.py  dev-setup-python.in.sh  enums.py  georef.py  shared_lib.py  structs.py  tgeoref.py
src/: App.c  App.h  Array.c  CMakeLists.txt  Def.c  Def.h  EZGrid.c  EZGrid.h  GeoRef.c  GeoRef.h  GeoRef.h.f  GeoRef.hf  GeoRef_Axis.c  GeoRef_Correc.c  GeoRef_Correct.c  GeoRef_Func.c  GeoRef_Interp.c  GeoRef_InterpCoords.c  GeoRef_InterpLL.c  GeoRef_InterpUV.c  GeoRef_InterpXY.c  GeoRef_Mask.c  GeoRef_RDR.c  GeoRef_RPN.c  GeoRef_RPNAxis.c  GeoRef_Set.c  GeoRef_Type_ABG.c  GeoRef_Type_C.c  GeoRef_Type_E.c  GeoRef_Type_L.c  GeoRef_Type_LAMBERT.c  GeoRef_Type_M.c  GeoRef_Type_NS.c  GeoRef_Type_O.c  GeoRef_Type_R.c  GeoRef_Type_T.c  GeoRef_Type_U.c  GeoRef_Type_W.c  GeoRef_Type_Y.c  GeoRef_Type_Z.c  (+32 more)
src/F90/: GeoRef_aminmax.F90  GeoRef_applywgts.F90  GeoRef_crot.F90  GeoRef_fillnpole.F90  GeoRef_fillspole.F90  GeoRef_internal_def.F90  GeoRef_lac.F90  GeoRef_xpngdag2.F90  GeoRef_xpngdb2.F90  cubic8.cdk  dgauss8.F90  ez8_avg.F90  ez8_avg_sph.F90  ez8_calcpoleval.F90  ez8_cartauv.F90  ez8_gdwfllw.F90  ez8_gdwfllw_new.f90  ez8_glat.F90  ez8_lamb_llwfgdw.F90  ez8_lambfll.F90  ez8_lambllfxy99.F90  ez8_llwfgdw.F90  ez8_mxm.F90  ez8_rgdint_0.F90  ez8_rgdint_3.F90  ez8_uvacart.F90  ez8_vllfxy.F90  ez8_vtxyfll.F90  ez8_vxyfll.F90  ez_corrbgd.F90  ez_glat.F90  ez_xpngdag2.F90  ez_xpngdb2.F90  inside_or_outside.F90  lorenzo_mask_fill.F90  qqqpar.cdk  qqqpar.inc
src/F90/cstintrp/: grids.f90  intrp_const.f90  intrp_engine.f90  intrp_itfc.f90  intrp_oce.f90  llxy.f90  nemo_proj.f90
src/f90/: cubic8.cdk  ez8_cartauv.f90  ez8_cherche.f90  ez8_gdwfllw.f90  ez8_genpole.f90  ez8_gfllfxy.f90  ez8_gfxyfll.f90  ez8_ggll2gd.f90  ez8_irgdint_1_nw.f90  ez8_irgdint_1_w.f90  ez8_irgdint_3.f90  ez8_irgdint_3_nw.f90  ez8_irgdint_3_w.f90  ez8_irgdint_3_wnnc.f90  ez8_lamb_gdwfllw.f90  ez8_lambllfxy99.f90  ez8_ll2ergd.f90  ez8_ll2igd.f90  ez8_ll2rgd.f90  ez8_llll2gd.f90  ez8_llwfgdw.f90  ez8_llwfgfw.f90  ez8_mxm.f90  ez8_rgdint_0.f90  ez8_rgdint_1.f90  ez8_rgdint_1_nw.f90  ez8_rgdint_1_w.f90  ez8_rgdint_3_nw.f90  ez8_rgdint_3_w.f90  ez8_uvacart.f90  ez8_vllfxy.f90  ez8_vrotf.f90  ez8_vrotf2.f90  ez8_vtxyfll.f90  ez_applywgts.f90  ez_avg_sph.f90  ez_calcpoleval.f90  ez_ggll2gd.f90  ez_glat.f90  ez_iaxint.f90  (+9 more)
src/include/: GeoRef.h  GeoRef.inc
src/include/georef/: Array.h  Def.h  GeoRef_Type_C.h  GeoRef_Utils.h  ZRef.h  gpc_ext.h
src/lib/: CMakeLists.txt  Def.c  GeoRef.c  GeoRef.h  GeoRef_Axis.c  GeoRef_Correct.c  GeoRef_Func.c  GeoRef_Interp.c  GeoRef_InterpCoords.c  GeoRef_InterpLL.c  GeoRef_InterpUV.c  GeoRef_InterpXY.c  GeoRef_Mask.c  GeoRef_Set.c  GeoRef_Type_E.c  GeoRef_Type_L.c  GeoRef_Type_LAMBERT.c  GeoRef_Type_M.c  GeoRef_Type_NS.c  GeoRef_Type_O.c  GeoRef_Type_Q.c  GeoRef_Type_R.c  GeoRef_Type_T.c  GeoRef_Type_U.c  GeoRef_Type_W.c  GeoRef_Type_Y.c  GeoRef_Type_Z.c  GeoRef_mod.F90  GeoRef_mod.f90  Triangle.c  Vertex.c  ZRef.c  ezscint.h  gpc.h
src/lib/F90/: dgauss8.F90  ez8_cartauv.F90  ez8_irgdint_1.F90  ez8_irgdint_3_wnnc.F90  ez8_mxm.F90  ez8_rgdint_0.F90  ez8_rgdint_3_wnnc.F90  ez_applywgts.F90  ez_crot.F90  ez_glat.F90  ez_xpngdb2.F90  ordleg8.F90  pi.inc  zlin8.cdk
src/lib/f90/: ez8_gdwfllw.f90  ez8_irgdint_1.f90  ez8_irgdint_3_wnnc.f90  ez8_lamb_gdwfllw.f90  ez8_llflamb.f90  ez_applywgts.f90  ez_avg_sph.f90  ez_fillspole.f90  ezget_mask_zones.f90
src/lib/include/: GeoRef.h  GeoRef.inc  GeoRef_f.h
src/lib/include/georef/: Def.h  GeoRef_Type_Q.h  GeoRef_Utils.h  OGR.h  ZRefInterp.h  gpc_ext.h
src/utils/: CMakeLists.txt  georef_cstintrp_reindexer.c  georef_interp.c  georef_nemo_reindexer.c
test/: CMakeLists.txt  NEMOInterp_sinus.tcl  comparaison_interp.py  demo_a_grid.py  demo_defGrid_L.py  demo_m_grid.py  demo_o_grid.py  ezproto.h  interpolate.c  point.py  test.py  test.sh
test/C/: CMakeLists.txt  Interpolate.c
test/GRIDS/: out.csintrp  out.csintrp.avg  out.spi
test/in/: mesh.std  orca.std
test/lib/: CMakeLists.txt  CubedSphere.c  Interpolate.c  TestQTree.c  test.F90
test/libgeoref/: __init__.py  interp.py  interp_new.py  lib_structs.py  proto.py  struct.py
test/python/: GeoRef_Dev.ipynb  comparaison_interp.py  demo_a_grid.py  demo_defGrid_L.py  interpolate.py  run-python-test.sh  test_proto.py
test/python/old_tests/: README.md  stage_2020.py
test/tcl/: NEMOInterp_sinus.tcl
util/: CMakeLists.txt  EZTiler.c  Interpolate.c  ReGrid.c  Test.c  TestQTree.c
(+116 files in other folders)
